proyecto de JC se arregla el navbar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li>
                     <a href="">us</a>
                 </li>
-                <button>Login</button>
+                <button class="content_button">Login</button>
             </ul>
         </nav>
         <img class="menu" src="menu.png" alt="">
